fix(run): honor manifest launcher flags